# nklib

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  docker.travis.yml  travis.yml
cmake/: FindZ3.cmake
example/: CMakeLists.txt  test.cpp
src/: common.cpp  common.h  dbg.h  polynomial.cpp  polynomial.h
